<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <ImageView
        android:id="@+id/ivProfileCapa"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@color/primaryColor"
        android:contentDescription="Foto de Capa"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/ivProfileCapa">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentEmail"
        android:name="com.rameda38.trabalhofinal.EmailInputFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tilName" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentPassword"
        android:name="com.rameda38.trabalhofinal.PasswordInputFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentEmail" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentBtnRegister"
        android:name="com.rameda38.trabalhofinal.ButtonFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogleRegister"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_google_register"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentBtnRegister"/>

    <TextView
        android:id="@+id/tvGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_has_account"
        android:layout_marginTop="24dp"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnGoogleRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
